# rm-frust5-api

./: .gitignore  Cargo.toml  LICENSE  README.md  Untitled.txt  test.fast5  test2.fast5
src/: lib.rs  utils.rs
tests/: integration_test.rs
