[package]
name = "rm-frust5-api"
version = "0.0.3"
edition = "2021"
rust-version = "1.58.0"
authors = ["adoni5 <roryjmunro1@gmail.com>"]
description = "A rust wrapper of the HDF5 crate for handling Oxford Nanopore Technologies FAST5 files."
homepage = "https://github.com/Adoni5/rm-frust5-api"
documentation = "https://docs.rs/rm-frust5-api"
repository = "https://github.com/Adoni5/rm-frust5-api"
readme = "README.md"
license = "MIT"
keywords = ["Bioinformatics", "ONT", "FAST5", "HDF5"]
categories = ["filesystem", "parsing", "science"]
exclude = [
    "*.fast5"
]

[lib]
name = "frust5_api"
path = "src/lib.rs"
license = "MIT"


[dependencies]
hdf5 = "0.8"
resolve-path = "0.1.0"
